# code_diver

./: Cargo.toml  README.md
skills/dive-tag/: SKILL.md
src/: main.rs  mcp_server.rs  parser.rs  static_analysis.rs
web/: package-lock.json  package.json
web/src/: App.tsx  api.ts  styles.css  types.ts
web/src/graph/: ComponentNode.tsx  CopyButton.tsx  FileGroupNode.tsx  FileNode.tsx  GraphView.tsx  GroupNode.tsx  RelationEdge.tsx  TagNode.tsx  colors.ts  layout.ts  transform.ts  useGraphData.ts
web/src/markdown/: MarkdownView.tsx
web/src/nav/: Breadcrumb.tsx  useNavigation.ts
